feat: introduce tool metadata, types, and a display component, adding a new icon dependency.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify-json/mdi": "^1.2.3",
 		"@sveltejs/adapter-vercel": "^6.2.0",
 		"@sveltejs/kit": "^2.49.1",
