--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
 		"unplugin-icons": "^22.5.0",
 		"vite": "^7.2.6",
 		"vite-plugin-devtools-json": "^1.0.0"
+	},
+	"dependencies": {
+		"dexie": "^4.2.1"
 	}
 }
