--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@eslint/js": "^9.39.1",
 		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify-json/heroicons": "^1.2.3",
+		"@iconify-json/lucide": "^1.2.82",
 		"@iconify-json/mdi": "^1.2.3",
 		"@sveltejs/adapter-vercel": "^6.2.0",
 		"@sveltejs/kit": "^2.49.1",
