--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@iconify-json/fluent": "^1.2.36",
 		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify-json/heroicons": "^1.2.3",
 		"@iconify-json/lucide": "^1.2.82",
 		"@iconify-json/mdi": "^1.2.3",
 		"@iconify-json/mingcute": "^1.2.6",
 		"@iconify-json/stash": "^1.2.4",
+		"@iconify-json/system-uicons": "^1.2.4",
 		"@sveltejs/adapter-vercel": "^6.2.0",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
