--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@iconify-json/fluent": "^1.2.36",
 		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify-json/heroicons": "^1.2.3",
+		"@iconify-json/hugeicons": "^1.2.22",
 		"@iconify-json/lucide": "^1.2.82",
 		"@iconify-json/mdi": "^1.2.3",
 		"@iconify-json/mingcute": "^1.2.6",
